--- a/style.css
+++ b/style.css
@@ -16,3 +16,30 @@ body {
     margin: 0;
     padding-bottom: 100px;
 }
+
+h1 {
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.filter-container {
+    margin-top: 20px;
+    width: 80vw;
+    max-width: 800px;
+}
+.filter {
+    width: 100%;
+    padding: 12px;
+}
+
+.post {
+    position: relative;
+    background-color: #4992d3;
+    box-shadow: 0 2px 4px, rgba(0, 0, 0, 0.3);
+    border-radius: 3px;
+    padding: 20px;
+    margin: 40px 0;
+    display: flex;
+    width: 80vw;
+    max-width: 800px;
+}
